--- a/client/src/components/CommentSection/Comment.css
+++ b/client/src/components/CommentSection/Comment.css
@@ -5,13 +5,18 @@
 }
 
 .comment-list {
-  background-color: aquamarine;
+  background-color: #e9e9e9;
   width: 30%;
   margin: auto;
+  padding: 25px;
+  border-radius: 7px 7px 7px 7px;
+  -webkit-box-shadow: 1px 1px 11px -2px rgba(0,0,0,0.75);
+  -moz-box-shadow: 1px 1px 11px -2px rgba(0,0,0,0.75);
+  box-shadow: 1px 1px 11px -2px rgba(0,0,0,0.75);
 }
 
 .comment {
-  background-color: aliceblue;
+  background-color: white;
   margin-bottom: 15px;
   text-align: left;
   padding: 10px;
@@ -20,4 +25,54 @@
   display: flex;
   justify-content: center;
   flex-direction: column;
+  -webkit-box-shadow: 1px 1px 11px -2px rgba(0,0,0,0.75);
+  -moz-box-shadow: 1px 1px 11px -2px rgba(0,0,0,0.75);
+  box-shadow: 1px 1px 11px -2px rgba(0,0,0,0.75);
+}
+
+.comment-author {
+  font-size: 0.85rem;
+  text-align: right;
+}
+
+.submit-button {
+  -moz-box-shadow: 0px 0px 14px -1px #3e7327;
+  -webkit-box-shadow: 0px 0px 14px -1px #3e7327;
+  box-shadow: 0px 0px 14px -1px #3e7327;
+  background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #77b55a), color-stop(1, #72b352));
+  background:-moz-linear-gradient(top, #77b55a 5%, #72b352 100%);
+  background:-webkit-linear-gradient(top, #77b55a 5%, #72b352 100%);
+  background:-o-linear-gradient(top, #77b55a 5%, #72b352 100%);
+  background:-ms-linear-gradient(top, #77b55a 5%, #72b352 100%);
+  background:linear-gradient(to bottom, #77b55a 5%, #72b352 100%);
+  filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#77b55a', endColorstr='#72b352',GradientType=0);
+  background-color:#77b55a;
+  -moz-border-radius:4px;
+  -webkit-border-radius:4px;
+  border-radius:4px;
+  border:1px solid #4b8f29;
+  display:inline-block;
+  cursor:pointer;
+  color:#ffffff;
+  font-family:Arial, sans-serif;
+  font-size:13px;
+  font-weight:bold;
+  padding:6px 12px;
+  text-decoration:none;
+  text-shadow:0px 1px 0px #5b8a3c;
+  margin-left: 15px;
+}
+.submit-button:hover {
+  background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #72b352), color-stop(1, #77b55a));
+  background:-moz-linear-gradient(top, #72b352 5%, #77b55a 100%);
+  background:-webkit-linear-gradient(top, #72b352 5%, #77b55a 100%);
+  background:-o-linear-gradient(top, #72b352 5%, #77b55a 100%);
+  background:-ms-linear-gradient(top, #72b352 5%, #77b55a 100%);
+  background:linear-gradient(to bottom, #72b352 5%, #77b55a 100%);
+  filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#72b352', endColorstr='#77b55a',GradientType=0);
+  background-color:#72b352;
+}
+.submit-button:active {
+  position:relative;
+  top:1px;
 }
