--- a/client/src/components/CommentSection/Comment.css
+++ b/client/src/components/CommentSection/Comment.css
@@ -1,12 +1,12 @@
 .comment-container {
   /*background-color: salmon;*/
-  width: 30%;
+  /*width: 500px;*/
   margin: auto;
 }
 
 .comment-list {
   background-color: #e9e9e9;
-  width: 30%;
+  width: 700px;
   margin: auto;
   padding: 25px;
   border-radius: 7px 7px 7px 7px;
