--- a/client/src/components/CommentSection/Comment.css
+++ b/client/src/components/CommentSection/Comment.css
@@ -20,8 +20,8 @@
   margin-bottom: 15px;
   text-align: left;
   padding: 10px;
-  border-radius: 15px 15px 15px 15px;
-  height: 40px;
+  border-radius: 10px 10px 10px 10px;
+  min-height: 40px;
   display: flex;
   justify-content: center;
   flex-direction: column;
@@ -30,9 +30,25 @@
   box-shadow: 1px 1px 11px -2px rgba(0,0,0,0.75);
 }
 
+.comment-header {
+  display: flex;
+  margin-bottom: 10px;
+}
+
 .comment-author {
+  flex-grow: 1;
+  font-family: 'Montserrat', sans-serif;
+}
+
+.comment-timestamp {
+  flex-grow: 1;
   font-size: 0.85rem;
   text-align: right;
+  font-family: 'Lato', sans-serif;
+}
+
+.comment-text {
+  font-family: 'Raleway', sans-serif;
 }
 
 .submit-button {
