--- a/client/src/components/CommentSection/Comment.css
+++ b/client/src/components/CommentSection/Comment.css
@@ -5,14 +5,14 @@
 }
 
 .comment-list {
-  background-color: #e9e9e9;
+  /*background-color: #e9e9e9;*/
   width: 700px;
   margin: auto;
-  padding: 25px;
-  border-radius: 7px 7px 7px 7px;
-  -webkit-box-shadow: 1px 1px 11px -2px rgba(0,0,0,0.75);
-  -moz-box-shadow: 1px 1px 11px -2px rgba(0,0,0,0.75);
-  box-shadow: 1px 1px 11px -2px rgba(0,0,0,0.75);
+  /*padding: 25px;*/
+  /*border-radius: 7px 7px 7px 7px;*/
+  /*-webkit-box-shadow: 1px 1px 11px -2px rgba(0,0,0,0.75);*/
+  /*-moz-box-shadow: 1px 1px 11px -2px rgba(0,0,0,0.75);*/
+  /*box-shadow: 1px 1px 11px -2px rgba(0,0,0,0.75);*/
 }
 
 .comment {
@@ -28,6 +28,10 @@
   -webkit-box-shadow: 1px 1px 11px -2px rgba(0,0,0,0.75);
   -moz-box-shadow: 1px 1px 11px -2px rgba(0,0,0,0.75);
   box-shadow: 1px 1px 11px -2px rgba(0,0,0,0.75);
+}
+
+.comment-form {
+  padding-bottom: 50px;
 }
 
 .comment-header {
