have initial dropdown working with reactstrap

--- a/client/src/components/CommentSection/SocialCard.css
+++ b/client/src/components/CommentSection/SocialCard.css
@@ -23,12 +23,9 @@
   /*background-color: #72b352;*/
 }
 
-/*.avatar {*/
-  /*background-image: url("http://i.pravatar.cc/75");*/
-  /*border-radius: 50%;*/
-  /*width: 75px;*/
-  /*height: 75px;*/
-/*}*/
+/*.avatar
+
+*/
 
 .card-header {
   display: flex;
