--- a/client/src/components/CommentSection/SocialCard.css
+++ b/client/src/components/CommentSection/SocialCard.css
@@ -61,17 +61,30 @@
 
 .card-footer {
   display: flex;
+  flex-direction: column;
   justify-content: space-around;
   width: 100%;
+  padding: 0;
+}
+
+.footer-reply {
+  align-self: flex-start;
+  display: none;
+}
+
+.footer-reply.show {
+  display: flex;
+}
+
+.footer-icons {
+  /*padding-left: 5px;*/
+  font-size: 0.9rem;
+  display: flex;
+  justify-content: space-around;
   padding: 5px 25% 5px 5px;
 }
 
-.card-footer div {
-  padding-left: 5px;
-  font-size: 0.9rem;
-}
-
-.card-footer div i {
+.footer-icons i {
   padding-right: 7px;
   cursor: pointer;
 }
@@ -98,3 +111,4 @@
 .edit-menu:hover {
   cursor: pointer;
 }
+
